# doctor_agent

./: .gitignore  alembic.ini  pyproject.toml
app/: lifespan.py  main.py
app/core/: auth.py  config.py  security.py
app/database/: base.py  session.py
app/database/migration/: env.py
app/database/migration/versions/: d65e13242b3b_rel_fixed.py
app/database/models/: __init__.py  chat_history.py  user.py
app/database/schema/: token.py  user.py
app/routes/: baseroute.py  login.py  signup.py
app/services/: signup_services.py
docs/: database_schema.md
